完善测试代码